избавился от лишних <span> в "кнопках"

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
       <div class="main-navigation-wrapper">
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
           <input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
-          <button class="search-button" type="submit"><span>Найти</span></button>
+          <button class="search-button" type="submit">Найти</button>
         </form>
         <section class="user-navigation">
           <h2 class="visually-hidden">Навигация пользователя</h2>
@@ -134,7 +134,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="button" type="submit"><span class="button-text">Показать</span></button>
+          <button class="button" type="submit">Показать</button>
         </form>
       </section>
 
@@ -161,7 +161,7 @@
 
             </a>
             <p class="item-cover">
-              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="button" href="#">В корзину</a>
               <a class="item-compare" href="#">Добавить к сравнению</a>
             </p>
             <a href="#">
@@ -174,7 +174,7 @@
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             </a>
             <p class="item-cover">
-              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="button" href="#">В корзину</a>
               <a class="item-compare" href="#">Добавить к сравнению</a>
             </p>
             <a href="#">
@@ -187,7 +187,7 @@
               <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
             <p class="item-cover">
-              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="button" href="#">В корзину</a>
               <a class="item-compare" href="#">Добавить к сравнению</a>
             </p>
             <a href="#">
@@ -200,7 +200,7 @@
               <img src="img/item-4.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
             <p class="item-cover">
-              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="button" href="#">В корзину</a>
               <a class="item-compare" href="#">Добавить к сравнению</a>
             </p>
             <a href="#">
