--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="main-navigation-wrapper">
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
           <input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
-          <button class="search-button" type="submit"><span>Найти</span></button>
+          <button class="search-button" type="submit">Найти</button>
         </form>
         <section class="user-navigation">
           <h2 class="visually-hidden">Навигация пользователя</h2>
@@ -84,7 +84,7 @@
               Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
               всего 5 килограмм.
             </p>
-            <a class="button slider-button" href="#"><span>Подробнее</span></a>
+            <a class="button slider-button" href="#">Подробнее</a>
             <table class="advantages">
               <tr>
                 <td class="column-1">8,5 м</td>
@@ -105,7 +105,7 @@
             <p class="slider-content">
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
             </p>
-            <a class="button slider-button" href="#"><span>Подробнее</span></a>
+            <a class="button slider-button" href="#">Подробнее</a>
             <table class="advantages">
               <tr>
                 <td>48 часов</td>
@@ -123,7 +123,7 @@
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
               камеру.
             </p>
-            <a class="button slider-button" href="#"><span>Подробнее</span></a>
+            <a class="button slider-button" href="#">Подробнее</a>
             <table class="advantages">
               <tr>
                 <td class="column-1">800 м</td>
@@ -218,7 +218,7 @@
           <li><a href="#">Автотрейдинг</a></li>
           <li><a href="#">ЖелДорЭкспедиция</a></li>
         </ul>
-        <a class="button" href="#"><span class="button-text">Подробнее о нас</span></a>
+        <a class="button" href="#">Подробнее о нас</a>
       </section>
       <section class="contacts">
         <h2 class="contacts-title">Контакты</h2>
@@ -231,7 +231,7 @@
           <a class="contact-map" target="blank" href="https://goo.gl/maps/T8c4dMJwpto"><img src="img/map.jpg"
               width="560" height="222" alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
         </p>
-        <a class="button contacts-button" href="#"><span class="button-text">Напишите нам</span></a>
+        <a class="button contacts-button" href="#">Напишите нам</a>
       </section>
     </div>
   </main>
@@ -294,16 +294,16 @@
         <label for="contact-letter">Текст письма:</label>
         <textarea id="contact-letter" name="letter" cols="50" rows="10" placeholder="В свободной форме"></textarea>
       </p>
-      <button class="button" type="submit"><span>Отправить</span></button>
+      <button class="button" type="submit">Отправить</button>
     </form>
-    <button class="button-close contact-button-close"><span class="visually-hidden">Закрыть</span></button>
+    <button class="button-close contact-button-close" aria-label="Закрыть"></button>
   </section>
   <section class="modal-map visually-hidden">
     <h2 class="visually-hidden">Как до нас добраться</h2>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1552408030911"
       width="960" height="559" style="border:0" allowfullscreen></iframe>
-    <button class="button-close map-button-close"><span class="visually-hidden">Закрыть</span></button>
+    <button class="button-close map-button-close" aria-label="Закрыть"></button>
   </section>
   <script>
     var contact = document.querySelector(".contacts-button");
