--- a/index.html
+++ b/index.html
@@ -85,18 +85,11 @@
               всего 5 килограмм.
             </p>
             <a class="button slider-button" href="#">Подробнее</a>
-            <table class="advantages">
-              <tr>
-                <td class="column-1">8,5 м</td>
-                <td class="column-2">5 кг</td>
-                <td class="column-3">Карбон</td>
-              </tr>
-              <tr>
-                <td class="column-1">Длина палки</td>
-                <td class="column-2">Вес палки</td>
-                <td class="column-3">Материал</td>
-              </tr>
-            </table>
+            <ul class="advantage-list">
+              <li class="advantage-item">Длина палки <span>8,5 м</span></li>
+              <li class="advantage-item">Вес палки <span>5 кг</span></li>
+              <li class="advantage-item">Материал <span>Карбон</span></li>
+            </ul>
           </section>
         </li>
         <li class="slider-item">
@@ -106,39 +99,27 @@
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
             </p>
             <a class="button slider-button" href="#">Подробнее</a>
-            <table class="advantages">
-              <tr>
-                <td>48 часов</td>
-              </tr>
-              <tr>
-                <td>Без подзарядки</td>
-              </tr>
-            </table>
+            <ul class="advantage-list">
+              <li class="advantage-item">Без подзарядки <span>48 часов</span></li>
+            </ul>
           </section>
         </li>
         <li class="slider-item">
           <section class="slider-wrapper">
             <h3 class="slider-title">Порхает как бабочка, жалит как пчела!</h3>
-            <p  class="slider-content">
+            <p class="slider-content">
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
               камеру.
             </p>
             <a class="button slider-button" href="#">Подробнее</a>
-            <table class="advantages">
-              <tr>
-                <td class="column-1">800 м</td>
-                <td>50 м</td>
-              </tr>
-              <tr>
-                <td>Дальность полета</td>
-                <td>Радиус поражения</td>
-              </tr>
-            </table>
+            <ul class="advantage-list">
+              <li class="advantage-item">Дальность полета <span>800 м</span></li>
+              <li class="advantage-item">Радиус поражения <span>50 м</span></li>
+            </ul>
           </section>
         </li>
       </ol>
     </section>
-
     <section class="popular container">
       <h2 class="visually-hidden">Популярные товары:</h2>
       <ul class="popular-list">
@@ -149,10 +130,7 @@
         <li class="popular-item popular-item--5"><a class="popular-link" href="#">Умные часы</a></li>
         <li class="popular-item popular-item--6"><a class="popular-link" href="#">Квадрокоптеры</a></li>
       </ul>
-
-
     </section>
-
     <section class="services container">
       <h2 class="visually-hidden">Наши сервисы:</h2>
       <input class="visually-hidden" type="radio" id="services-1" name="services-toggle" checked>
@@ -173,14 +151,14 @@
         </li>
         <li class="services-item">
           <h3>Гарантия</h3>
-          <p  class="services-content">
+          <p class="services-content">
             Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам
             новый. Товар,&nbspне&nbspдом, конечно же.
           </p>
         </li>
         <li class="services-item">
           <h3>Кредит</h3>
-          <p  class="services-content">
+          <p class="services-content">
             Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
             кредита.
             Выгодные для нашего банка, разумеется.
