убрал ссылки из блока "deliveries"

--- a/index.html
+++ b/index.html
@@ -166,8 +166,6 @@
         </li>
       </ul>
     </section>
-
-
     <section class="companies container">
       <h2 class="visually-hidden">На нашем сайте представлена продукция популярных брендов:</h2>
       <ul class="companies-list">
@@ -192,9 +190,9 @@
           компаниями:
         </p>
         <ul class="deliveries">
-          <li><a href="#">Деловые Линии</a></li>
-          <li><a href="#">Автотрейдинг</a></li>
-          <li><a href="#">ЖелДорЭкспедиция</a></li>
+          <li>Деловые Линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
         </ul>
         <a class="button" href="#">Подробнее о нас</a>
       </section>
