убрал лишние <p> из разметки

--- a/index.html
+++ b/index.html
@@ -203,10 +203,8 @@
           Всякое
           бывает.
         </p>
-        <p>
-          <a class="contact-map" target="blank" href="https://goo.gl/maps/T8c4dMJwpto"><img src="img/map.jpg"
+          <a class="contacts-map" target="blank" href="https://goo.gl/maps/T8c4dMJwpto"><img src="img/map.jpg"
               width="560" height="222" alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
-        </p>
         <a class="button contacts-button" href="#">Напишите нам</a>
       </section>
     </div>
@@ -286,7 +284,7 @@
     var contactPopup = document.querySelector(".modal-contact");
     var contactButtonClose = document.querySelector(".contact-button-close");
     var mapButtonClose = document.querySelector(".map-button-close");
-    var contactMap = document.querySelector(".contact-map");
+    var contactMap = document.querySelector(".contacts-map");
     var mapPopup = document.querySelector(".modal-map");
     contactButtonClose.addEventListener("click", function (evt) {
       evt.preventDefault();
