убрал лишние <p> из разметки

--- a/index.html
+++ b/index.html
@@ -243,10 +243,8 @@
           <li><a class="social-instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
           <li><a class="social-twiter" href="#"><span class="visually-hidden">Твиттер</span></a></li>
         </ul>
-        <p class="footer-copyright">
-          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"
+          <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"
               alt="Логотоп компании HTML Academy"></a>
-        </p>
       </div>
     </div>
   </footer>
