--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
           Всякое
           бывает.
         </p>
-          <a class="contacts-map" target="blank" href="https://goo.gl/maps/T8c4dMJwpto"><img src="img/map.jpg"
-              width="560" height="222" alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
+        <a class="contacts-map" target="blank" href="https://goo.gl/maps/T8c4dMJwpto"><img src="img/map.jpg" width="560"
+            height="222" alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
         <a class="button contacts-button" href="#">Напишите нам</a>
       </section>
     </div>
@@ -229,12 +229,12 @@
         </ul>
       </div>
       <div class="footer-navigation footer-middle">
+        <p class="footer-contacts adress">г. Москва, ул. Строителей, 15</p>
         <ul class="site-footer-navigation">
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Гарантия</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <p class="footer-contacts adress">г. Москва, ул. Строителей, 15</p>
         <p class="footer-contacts phone">Тел.: +7 (495) 495-95-95</p>
       </div>
       <div class="footer-bottom">
@@ -243,8 +243,8 @@
           <li><a class="social-instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
           <li><a class="social-twiter" href="#"><span class="visually-hidden">Твиттер</span></a></li>
         </ul>
-          <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"
-              alt="Логотоп компании HTML Academy"></a>
+        <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg"
+            width="27" height="35" alt="Логотоп компании HTML Academy"></a>
       </div>
     </div>
   </footer>
