--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <h2 class="visually-hidden">Популярные товары:</h2>
       <ul class="popular-list">
         <li class="popular-item popular-item--1"><a class="popular-link" href="#">Виртуальная реальность</a></li>
-        <li class="popular-item popular-item--2"><a class="popular-link" href="#">Моноподы для&nbspселфи</a></li>
+        <li class="popular-item popular-item--2"><a class="popular-link" href="#">Моноподы для&nbsp;селфи</a></li>
         <li class="popular-item popular-item--3"><a class="popular-link" href="#">Экшн-камеры</a></li>
         <li class="popular-item popular-item--4"><a class="popular-link" href="#">Фитнес-браслеты</a></li>
         <li class="popular-item popular-item--5"><a class="popular-link" href="#">Умные часы</a></li>
@@ -153,7 +153,7 @@
           <h3>Гарантия</h3>
           <p class="services-content">
             Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам
-            новый. Товар,&nbspне&nbspдом, конечно же.
+            новый. Товар,&nbsp;не&nbsp;дом, конечно же.
           </p>
         </li>
         <li class="services-item">
