--- a/catalog.html
+++ b/catalog.html
@@ -20,17 +20,12 @@
           <input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
           <button class="search-button" type="submit">Найти</button>
         </form>
-        <section class="user-navigation">
-          <h2 class="visually-hidden">Навигация пользователя</h2>
-          <ul class="user-info-wrapper">
+        <ul class="user-navigation authorized">
             <li class="user-info"><a class="login-link" href="login.html">Валентин Петухов</a></li>
             <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
+            <li class="user-navigation-item-compare"><a class="compare" href="#">Сравнить</a></li>
+            <li class="user-navigation-item-cart"><a class="cart" href="#">Корзина</a></li>
           </ul>
-          <ul class="user-navigation-wrapper">
-            <li><a class="compare" href="#">Сравнить</a></li>
-            <li><a class="cart" href="#">Корзина</a></li>
-          </ul>
-        </section>
       </div>
       <ul class="site-navigation">
         <li>
