рефакторинг навигации пользователя в footer

--- a/catalog.html
+++ b/catalog.html
@@ -223,19 +223,11 @@
       <div class="footer-top">
         <a class="footer-logo" href="index.html"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
-        <ul class="user-footer-navigation">
-          <li>
-            <ul class="footer-info-wrapper">
-              <li><a class="footer-login" href="#">Валентин Петухов</a></li>
-              <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
-            </ul>
-          </li>
-          <li>
-            <ul class="footer-navigation-wrapper">
-              <li><a class="footer-compare" href="#">Сравнить</a></li>
-              <li><a class="footer-cart" href="#  ">Корзина</a></li>
-            </ul>
-          </li>
+        <ul class="user-footer-navigation authorized">
+            <li class="footer-login-item"><a class="footer-login" href="#">Валентин Петухов</a></li>
+            <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
+            <li class="footer-compare-item"><a class="footer-compare" href="#">Сравнить</a></li>
+            <li class="footer-cart-item"><a class="footer-cart" href="#  ">Корзина</a></li>
         </ul>
       </div>
       <div class="footer-navigation footer-middle">
