--- a/index.html
+++ b/index.html
@@ -209,19 +209,11 @@
       <div class="footer-top">
         <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
-        <ul class="user-footer-navigation">
-          <li>
-            <ul class="footer-info-wrapper">
-              <li><a class="footer-login" href="#">Войти</a></li>
+            <ul class="user-footer-navigation">
+                <li class="footer-login-item"><a class="footer-login" href="#">Войти</a></li>
+                <li class="footer-compare-item"><a class="footer-compare" href="#">Сравнить</a></li>
+                <li class="footer-cart-item"><a class="footer-cart" href="#  ">Корзина</a></li>
             </ul>
-          </li>
-          <li>
-            <ul class="footer-navigation-wrapper">
-              <li><a class="footer-compare" href="#">Сравнить</a></li>
-              <li><a class="footer-cart" href="#  ">Корзина</a></li>
-            </ul>
-          </li>
-        </ul>
       </div>
       <div class="footer-navigation footer-middle">
         <p class="footer-contacts adress">г. Москва, ул. Строителей, 15</p>
