убрал глобальные стили тэгов

--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="overflow-hidden">
     <div class="container">
       <h1>Моноподы для селфи</h1>
       <ul class="breadcrumbs">
