--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main  class="overflow-hidden">
     <h1 class="visually-hidden">Интернет-магазин Device</h1>
     <section class="slider container">
       <h2 class="visually-hidden">Лучшие товары</h2>
