--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <div class="contact-form-wrapper">
         <p>
           <label for="contact-name">Ваше имя:</label>
-          <input id="contact-name" type="text" name="name" placeholder="Имя Фамилия">
+          <input id="contact-name" type="text" name="user-name" placeholder="Имя Фамилия">
         </p>
         <p>
           <label for="contact-mail">Ваш e-mail:</label>
@@ -267,6 +267,10 @@
   <script>
     var contact = document.querySelector(".contacts-button");
     var contactPopup = document.querySelector(".modal-contact");
+    var form = contactPopup.querySelector(".contact-form");
+    var userName = contactPopup.querySelector("[name=user-name]");
+  var mail = contactPopup.querySelector("[name=mail]");
+  var text = contactPopup.querySelector("[name=letter]");
     var contactButtonClose = document.querySelector(".contact-button-close");
     var mapButtonClose = document.querySelector(".map-button-close");
     var contactMap = document.querySelector(".contacts-map");
@@ -274,6 +278,7 @@
     contactButtonClose.addEventListener("click", function (evt) {
       evt.preventDefault();
       contactPopup.classList.add("visually-hidden");
+      contactPopup.classList.remove("modal-error");
     });
     contact.addEventListener("click", function (evt) {
       evt.preventDefault();
@@ -287,6 +292,14 @@
       evt.preventDefault();
       mapPopup.classList.add("visually-hidden");
     });
+    form.addEventListener("submit", function (evt) {
+      if (!userName.value || !mail.value || !text.value) {
+      evt.preventDefault();
+      contactPopup.classList.remove("modal-error");
+      contactPopup.offsetWidth = contactPopup.offsetWidth;
+      contactPopup.classList.add("modal-error");
+    }
+  });
   </script>
 </body>
 
