уменьшил вложенность тэгов

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
           </ul>
       </div>
       <ul class="site-navigation">
-        <li>
+        <li class="submenu">
           <a class="site-navigation-catalog" href="catalog.html">Каталог товаров</a>
           <div class="catalog-menu">
             <ul>
