--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
       </div>
       <ul class="site-navigation">
-        <li>
+        <li class="submenu">
           <a class="site-navigation-catalog" href="catalog.html">Каталог товаров</a>
           <div class="catalog-menu">
             <ul>
@@ -132,9 +132,9 @@
       <input class="visually-hidden" type="radio" id="services-2" name="services-toggle">
       <input class="visually-hidden" type="radio" id="services-3" name="services-toggle">
       <div class="tab-controls">
-        <label class="button services-button" for="services-1">Доставка</label>
-        <label class="button services-button" for="services-2">Гарантия</label>
-        <label class="button services-button" for="services-3">Кредит</label>
+        <label class="button services-button delivery-tab" for="services-1">Доставка</label>
+        <label class="button services-button warranty-tab" for="services-2">Гарантия</label>
+        <label class="button services-button credit-tab" for="services-3">Кредит</label>
       </div>
       <ul class="services-list">
         <li class="services-item">
