подключил style.min и js.min

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Девайс - каталог</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="catalog-page">
@@ -21,11 +21,11 @@
           <button class="search-button" type="submit">Найти</button>
         </form>
         <ul class="user-navigation authorized">
-            <li class="user-info"><a class="login-link" href="login.html">Валентин Петухов</a></li>
-            <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
-            <li class="user-navigation-item-compare"><a class="compare" href="#">Сравнить</a></li>
-            <li class="user-navigation-item-cart"><a class="cart" href="#">Корзина</a></li>
-          </ul>
+          <li class="user-info"><a class="login-link" href="login.html">Валентин Петухов</a></li>
+          <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
+          <li class="user-navigation-item-compare"><a class="compare" href="#">Сравнить</a></li>
+          <li class="user-navigation-item-cart"><a class="cart" href="#">Корзина</a></li>
+        </ul>
       </div>
       <ul class="site-navigation">
         <li class="submenu">
@@ -224,10 +224,10 @@
         <a class="footer-logo" href="index.html"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
         <ul class="user-footer-navigation authorized">
-            <li class="footer-login-item"><a class="footer-login" href="#">Валентин Петухов</a></li>
-            <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
-            <li class="footer-compare-item"><a class="footer-compare" href="#">Сравнить</a></li>
-            <li class="footer-cart-item"><a class="footer-cart" href="#  ">Корзина</a></li>
+          <li class="footer-login-item"><a class="footer-login" href="#">Валентин Петухов</a></li>
+          <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
+          <li class="footer-compare-item"><a class="footer-compare" href="#">Сравнить</a></li>
+          <li class="footer-cart-item"><a class="footer-cart" href="#  ">Корзина</a></li>
         </ul>
       </div>
       <div class="footer-navigation footer-middle">
