--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Девайс</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,11 +20,11 @@
           <input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
           <button class="search-button" type="submit">Найти</button>
         </form>
-          <ul class="user-navigation">
-            <li class="user-info"><a class="login-link" href="login.html">Войти</a></li>
-            <li class="user-navigation-item-compare"><a class="compare" href="#">Сравнить</a></li>
-            <li class="user-navigation-item-cart"><a class="cart" href="#">Корзина</a></li>
-          </ul>
+        <ul class="user-navigation">
+          <li class="user-info"><a class="login-link" href="login.html">Войти</a></li>
+          <li class="user-navigation-item-compare"><a class="compare" href="#">Сравнить</a></li>
+          <li class="user-navigation-item-cart"><a class="cart" href="#">Корзина</a></li>
+        </ul>
       </div>
       <ul class="site-navigation">
         <li class="submenu">
@@ -56,7 +56,7 @@
       </ul>
     </nav>
   </header>
-  <main  class="overflow-hidden">
+  <main class="overflow-hidden">
     <h1 class="visually-hidden">Интернет-магазин Device</h1>
     <section class="slider container">
       <h2 class="visually-hidden">Лучшие товары</h2>
@@ -209,11 +209,11 @@
       <div class="footer-top">
         <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
-            <ul class="user-footer-navigation">
-                <li class="footer-login-item"><a class="footer-login" href="#">Войти</a></li>
-                <li class="footer-compare-item"><a class="footer-compare" href="#">Сравнить</a></li>
-                <li class="footer-cart-item"><a class="footer-cart" href="#  ">Корзина</a></li>
-            </ul>
+        <ul class="user-footer-navigation">
+          <li class="footer-login-item"><a class="footer-login" href="#">Войти</a></li>
+          <li class="footer-compare-item"><a class="footer-compare" href="#">Сравнить</a></li>
+          <li class="footer-cart-item"><a class="footer-cart" href="#  ">Корзина</a></li>
+        </ul>
       </div>
       <div class="footer-navigation footer-middle">
         <p class="footer-contacts adress">г. Москва, ул. Строителей, 15</p>
@@ -264,7 +264,7 @@
       width="960" height="559" style="border:0" allowfullscreen></iframe>
     <button class="button-close map-button-close" aria-label="Закрыть"></button>
   </section>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
